--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,4 +30,4 @@ jobs:
 
     - run: pip install flake8
 
-    - run: flake8 --max-line-length 140 *.py
+    - run: flake8 --max-line-length 140 *.py */*.py
