--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,8 @@ jobs:
 
     - run: pip install -r requirements.txt
 
-    - run: pip install flake8
+    - run: pip install flake8 bandit
 
     - run: flake8 --max-line-length 100 occameracontrol
+
+    - run: bandit -r occameracontrol
