Switch from milliseconds to seconds
This patch removes the conversion of all time values to milliseconds. We
don't need to do that since we literally convert every time.

This fixes #27
This fixes #4

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,6 @@ jobs:
 
     - run: pip install flake8 bandit
 
-    - run: flake8 --max-line-length 100 occameracontrol
+    - run: flake8 occameracontrol
 
     - run: bandit -r occameracontrol
