--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: run flake8
+name: lint
 
 on:
   push:
@@ -17,6 +17,7 @@ jobs:
           - '3.9'
           - '3.10'
           - '3.11'
+          - '3.12'
 
     steps:
     - uses: actions/checkout@v4
@@ -28,8 +29,10 @@ jobs:
 
     - run: pip install -r requirements.txt
 
-    - run: pip install flake8 bandit
+    - run: pip install flake8 bandit pyright
 
     - run: flake8 occameracontrol
 
     - run: bandit -r occameracontrol
+
+    - run: pyright occameracontrol
