--- a/camera-control.yml
+++ b/camera-control.yml
@@ -32,6 +32,10 @@ calendar:
 #     preset_active: Camera preset to move to when recording (default: 1)
 #     preset_inactive: Camera preset to move to when not recording (default: 10)
 camera:
+  # The frequency in which the cameras position should be updated in seconds
+  # Default: 60
+  update_frequency: 60
+  
   test-agent:
     - url: http://camera-panasonic.example.com
       type: panasonic
