--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ['setuptools >= 61.0']
 build-backend = 'setuptools.build_meta'
 
 [project]
-name = 'occameracontrol'
+name = 'opencast-camera-control'
 version = '0.1.0'
 authors = [
     {name = 'Lars Kiesow', email = 'lkiesow@uos.de'},
