Info as default log level
This patch drops the default log level from `debug` to `info`. Debug
logs are usually unnecessary.

--- a/camera-control.yml
+++ b/camera-control.yml
@@ -69,4 +69,4 @@ metrics:
 # Configure the log level
 # Available levels are: debug, info, warning, error, critical)
 # Default: info
-loglevel: debug
+loglevel: info
