--- a/.github/rpm/opencast-camera-control.service
+++ b/.github/rpm/opencast-camera-control.service
@@ -8,3 +8,6 @@ Type=simple
 User=opencastcamera
 ExecStart=/usr/bin/opencast-camera-control
 Restart=always
+
+[Install]
+WantedBy=multi-user.target
