Metric for expected camera position
This patch adds a new metric for the expected camera position. This
allows users to compare the expected and actual positions of a camera
and visualize those or use the information for alerting.

This fixes #82

--- a/camera-control.yml
+++ b/camera-control.yml
@@ -21,8 +21,10 @@ calendar:
   # Default: 604800 (7 days)
   cutoff: 604800
 
-# The frequency in which the cameras position should be updated in seconds
-# Default: 60
+# The frequency in which to re-send the command to move the cameras to the
+# desired position in seconds. This ensure the camera position is corrected
+# eventually, even if there was an unexpected error.
+# Default: 300
 camera_update_frequency: 300
 
 # Camera Configuration
