--- a/.github/workflows/test-ospoc.yml
+++ b/.github/workflows/test-ospoc.yml
@@ -10,12 +10,4 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - run: pip install -r requirements.txt
-
-    - run: pip install flake8 bandit pyright
-
-    - run: flake8 occameracontrol
-
-    - run: bandit -r occameracontrol
-
-    - run: pyright occameracontrol
+    - run: tree
