--- a/.github/workflows/test-ospoc.yml
+++ b/.github/workflows/test-ospoc.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: self-hosted
 
     steps:
+    - run: find .
     - uses: actions/checkout@v4
-
     - run: pwd
     - run: find .
