--- a/camera-control.yml
+++ b/camera-control.yml
@@ -31,6 +31,11 @@ calendar:
 # Default: 300
 camera_update_frequency: 300
 
+# The reset-time is used to reset the camera control status for every camera to "automatic" at a certain time.
+# The time is specified in the format HH:MM.
+# Default: "03:00"
+reset_time: "03:00"
+
 # Camera Configuration
 # Configure the capture agents to get the calendar for and a list of cameras to
 # control when a capture agent starts.
