--- a/camera-control.yml
+++ b/camera-control.yml
@@ -31,8 +31,8 @@ calendar:
 # Default: 300
 camera_update_frequency: 300
 
-# The reset-time is used to reset the camera control status for every camera to "automatic" at a certain time.
-# The time is specified in the format HH:MM.
+# The reset-time is used to reset the camera control status for every camera
+# to "automatic" at a certain time. The time is specified in the format HH:MM.
 # Default: "03:00"
 reset_time: "03:00"
 
